service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openshifter
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: openshifter
