ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openshifter
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: openshifter
          servicePort: 8080
