template.yaml
apiVersion: v1
kind: Template
metadata:
  name: openshifter
objects:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: openshifter
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: openshifter
    template:
      metadata:
        labels:
          app: openshifter
      spec:
        containers:
          - name: openshifter
            image: "docker.io/panosece/openshifter:v4"
            imagePullPolicy: Always
            ports:
              - name: http
                containerPort: 8080
                protocol: TCP
- apiVersion: v1
  kind: Service
  metadata:
    name: openshifter
  spec:
    type: NodePort
    ports:
      - port: 8080
        targetPort: http
        protocol: TCP
        name: http
    selector:
      app: openshifter
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: openshifter
  spec:
    rules:
    - host: openshifter-myproject.192.168.99.102.nip.io
      http:
        paths:
        - path: /
          backend:
            serviceName: openshifter
            servicePort: 8080
